--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
   dio: ^5.4.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
