--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   dio: ^5.4.1
   shared_preferences: ^2.2.2
   flutter_secure_storage: ^9.0.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
